# k8s_test_client

./: Cargo.toml
src/: main.rs
